Add leaflet map component, disable ssr

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@solidjs/meta": "^0.29.3",
     "@solidjs/router": "^0.13.2",
     "@solidjs/start": "^1.0.0-rc.0",
+    "leaflet": "^1.9.4",
     "solid-js": "^1.8.16",
     "vinxi": "^0.3.11"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.11"
   }
 }
