--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "version": "vinxi version"
+    "version": "vinxi version",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'"
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.3",
@@ -19,6 +21,14 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.11"
+    "@types/leaflet": "^1.9.11",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^9.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-solid": "^2.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-solid": "^0.13.2",
+    "prettier": "^3.2.5"
   }
 }
